# bloomy-news

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  BROWSE_DASHBOARD.bat  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LAUNCH_DAILY.bat  LICENSE  Makefile  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  classifier.py  database.py  launch_daily.sh  mypy.ini  news_tool.py  pyproject.toml  requirements-dev.txt  requirements.txt  secrets.py  setup.cfg  telegram.py
.github/: FUNDING.yml  PROFILE.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-and-a.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: codeql.yml  test.yml
config/: categories.json  sources.json  telegram.json
dashboard/: app-bookmarks.js  app-filters.js  app.js  bookmarks.html  filters.html  generate_data.py  index.html  serve.py  style.css
docs/: ARCHITECTURE.md  BENCHMARKS.md  BLOG_POST.md  BRANCH_PROTECTION.md  CACHING.md  CLASSIFIER.md  CODING_STANDARDS.md  CONFIGURATION.md  COVERAGE.md  DATABASE.md  DEDUP.md  DEMO_SCRIPT.md  DEPLOYMENT.md  GOOD_FIRST_ISSUES.md  GPG_SIGNING.md  HACKER_NEWS.md  INTEGRATIONS.md  NEWCOMERS.md  NEWSLETTER.md  PRE_COMMIT.md  PRODUCT_HUNT.md  PROJECT_STRUCTURE.md  QUERY_OPTIMIZATION.md  SCRAPERS.md  SEO.md  SOCIAL_MEDIA.md  TESTING.md
scrapers/: __init__.py  _http.py  _keywords.py  _rss.py  arxiv.py  cybersec.py  finance.py  github.py  google_news.py  markets.py  newsapi.py  tech.py
scripts/: add_indexes.py  benchmark.py  check_system.py  enforce_coverage.py  evaluate_classifier.py  install_dashboard.py  query_analyzer.py  run_benchmarks.sh  scheduler.py  setup_branch_protection.sh  smoke_test.py  telegram_bot.py
tests/: conftest.py  test_classifier.py  test_classifier_extended.py  test_database_bookmark.py  test_database_extended.py  test_fixes.py  test_fresh_install.py  test_install_dashboard.py  test_integration.py  test_retention.py  test_scraper_arxiv.py  test_scraper_json.py  test_scraper_rss.py  test_telegram.py
tests/benchmarks/: test_classifier_benchmarks.py  test_database_benchmarks.py  test_scraper_benchmarks.py
